[package]
name = "krust"
version = "0.1.0"
authors = ["ethan <https://github.com/ethanae>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# disable stack unwinding
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"